# BayesOptGPT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  Makefile  README.md  RULES.md  build_logs.txt  pyproject.toml  runtime_logs.txt  space_info.json  streamlit_app.py
.github/workflows/: ci.yml
.hf_space_deploy/: Dockerfile  README.md
.hf_space_deploy/configs/: train.yaml  tune.yaml
.hf_space_deploy/scripts/: download_data.py  promote.py  tune.py
.hf_space_deploy/src/bayes_gp_llmops/: __init__.py  api.py  config.py  logging.py
artifacts/evaluation_full_run/: metrics_test.json  metrics_test_calibrated.json  metrics_validation.json  metrics_validation_calibrated.json
artifacts/model/bundle/: champion_manifest.json
configs/: data.yaml  default.yaml  model.yaml  serving.yaml  train.full-run.yaml
docker/: Dockerfile  README.md
docs/: README.md  serving_hf_spaces.md  streamlit_dashboard.md
notebooks/: README.md
scripts/: evaluate.py  serve.py  train.py  validate_bundle.py
src/bayes_gp_llmops/: api.py  cli.py  seed.py
src/bayes_gp_llmops/dashboard/: __init__.py  config.py  data.py  inference.py
src/bayes_gp_llmops/data/: __init__.py  config.py  datasets.py  preprocessing.py  tokenizer.py
src/bayes_gp_llmops/evaluation/: pipeline.py  reports.py
src/bayes_gp_llmops/models/: __init__.py  classifier.py  config.py  rope.py  swiglu.py  transformer.py
src/bayes_gp_llmops/serving/: __init__.py  bundle.py  champion.py  config.py  metadata_safety.py  runtime.py
src/bayes_gp_llmops/tracking/: __init__.py  mlflow_utils.py
tests/: test_api.py  test_cli_serve.py  test_dashboard_data.py  test_dashboard_inference.py  test_dashboard_metadata_sanitization.py  test_data_datasets.py  test_data_tokenizer_and_datamodule.py  test_download_data_script.py  test_evaluation_calibration.py  test_evaluation_pipeline.py  test_evaluation_reports.py  test_evaluation_test_batch_cap.py  test_model_components.py  test_serving_bundle.py  test_serving_bundle_loader.py  test_serving_champion.py  test_serving_config.py  test_serving_runtime.py  test_tracking_mlflow_utils.py  test_training_trainer.py  test_tuning_objective_merge.py  test_tuning_objective_smoke.py  test_tuning_optuna_runner.py  test_tuning_search_space.py
(+31 files in other folders)
